# wayout

./: Cargo.toml
src/: main.rs
